Protege area admin e ajusta login

--- a/admin-login.html
+++ b/admin-login.html
@@ -73,6 +73,12 @@
                 <p style="color: #666;">Faça login para acessar os formulários</p>
             </div>
 
+            <div class="alert" style="background: #fff3cd; color: #856404; border: 1px solid #ffeeba; margin-bottom: 20px;">
+                <i class="fas fa-lock"></i>
+                <strong>Área restrita:</strong> acesso exclusivo do tatuador/estúdio. Se você é cliente,
+                volte e preencha o formulário.
+            </div>
+
             <div id="errorMessage" class="error-message">
                 <i class="fas fa-exclamation-circle"></i> <span id="errorText"></span>
             </div>
