--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </div>
 
             <div style="text-align: center; margin-top: 40px; padding-top: 30px; border-top: 2px solid #eee;">
-                <a href="visualizar.html" style="display: inline-block; padding: 15px 30px; background: var(--gradient-1); color: white; text-decoration: none; border-radius: 10px; font-weight: 600; transition: all 0.3s ease;">
-                    <i class="fas fa-folder-open"></i> Área Administrativa - Visualizar Formulários
+                <a href="admin-login.html" style="display: inline-block; padding: 15px 30px; background: var(--gradient-1); color: white; text-decoration: none; border-radius: 10px; font-weight: 600; transition: all 0.3s ease;">
+                    <i class="fas fa-lock"></i> Área Administrativa - Login (somente tatuador)
                 </a>
             </div>
         </main>
