--- a/admin-login.html
+++ b/admin-login.html
@@ -121,6 +121,12 @@
                         <i class="fas fa-arrow-left"></i> Voltar para início
                     </a>
                 </div>
+
+                <div style="text-align: center; margin-top: 10px;">
+                    <a href="index.html" class="btn" style="background: #6c757d; text-decoration: none; width: 100%;">
+                        <i class="fas fa-user"></i> Sou cliente (voltar aos formulários)
+                    </a>
+                </div>
             </form>
 
             <div style="margin-top: 30px; padding-top: 20px; border-top: 2px solid #eee; text-align: center; font-size: 0.85rem; color: #666;">
