Corrige impressao do painel admin

--- a/visualizar.html
+++ b/visualizar.html
@@ -534,7 +534,7 @@
             content += `
                     <script>
                         window.onload = function() { window.print(); }
-                    </script>
+                    <\/script>
                 </body>
                 </html>
             `;
