--- a/visualizar.html
+++ b/visualizar.html
@@ -224,8 +224,11 @@
                 <button class="btn btn-back" onclick="window.location.href='index.html'">
                     <i class="fas fa-home"></i> Voltar ao Início
                 </button>
-                <button class="btn" style="background: #ff9800;" onclick="exportarDados()">
-                    <i class="fas fa-download"></i> Exportar Dados
+                <button class="btn" style="background: #2ecc71;" onclick="exportarExcel()">
+                    <i class="fas fa-file-excel"></i> Exportar Excel
+                </button>
+                <button class="btn" style="background: #95a5a6; font-size: 0.85rem; padding: 8px 12px;" onclick="exportarBackupJSON()" title="Backup técnico completo">
+                    <i class="fas fa-database"></i> Backup JSON
                 </button>
                 <button class="btn" style="background: #9c27b0;" onclick="fazerLogout()">
                     <i class="fas fa-sign-out-alt"></i> Sair
@@ -588,8 +591,47 @@
             }
         }
 
-        // Exportar dados
-        function exportarDados() {
+        // Exportar para Excel (CSV)
+        function exportarExcel() {
+            if (todosFormularios.length === 0) {
+                alert('Nenhum formulário para exportar!');
+                return;
+            }
+
+            // Preparar cabeçalhos
+            const headers = ['Tipo', 'Nome', 'CPF', 'Email', 'Telefone', 'Data', 'ID'];
+            let csvContent = headers.join(';') + '\n';
+
+            // Adicionar dados
+            todosFormularios.forEach(form => {
+                const row = [
+                    form.formType || '',
+                    (form.nome || '').replace(/;/g, ','),
+                    form.cpf || '',
+                    form.email || '',
+                    form.telefone || '',
+                    new Date(form.timestamp).toLocaleDateString('pt-BR'),
+                    form.formId || ''
+                ];
+                csvContent += row.join(';') + '\n';
+            });
+
+            // Criar blob e download
+            const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+            const url = URL.createObjectURL(blob);
+            const link = document.createElement('a');
+            link.href = url;
+            link.download = `formularios_${new Date().toISOString().split('T')[0]}.csv`;
+            document.body.appendChild(link);
+            link.click();
+            document.body.removeChild(link);
+            URL.revokeObjectURL(url);
+
+            alert(`✅ ${todosFormularios.length} formulários exportados para Excel com sucesso!`);
+        }
+
+        // Exportar Backup JSON (completo)
+        function exportarBackupJSON() {
             if (todosFormularios.length === 0) {
                 alert('Nenhum formulário para exportar!');
                 return;
@@ -622,7 +664,7 @@
             document.body.removeChild(link);
             URL.revokeObjectURL(url);
 
-            alert(`✅ ${todosFormularios.length} formulários exportados com sucesso!`);
+            alert(`✅ Backup completo exportado (${todosFormularios.length} formulários)`);
         }
 
         // Fazer logout
