Adiciona logo e nome do estudio Opedroquetatua em todas as paginas

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
-                <i class="fas fa-dragon"></i>
-                <h1>Estúdio de Tatuagem & Piercing</h1>
+            <div class="logo" style="display: flex; align-items: center; gap: 20px;">
+                <img src="Logo-Preto.jpeg" alt="Opedroquetatua" style="height: 80px; border-radius: 10px;">
+                <div>
+                    <h1>Opedroquetatua</h1>
+                    <p style="font-size: 0.9rem; color: #666; margin: 5px 0 0 0;">Tatuagem & Piercing</p>
+                </div>
             </div>
             <p class="subtitle">Sistema de Formulários Digital</p>
         </header>
