--- a/visualizar.html
+++ b/visualizar.html
@@ -186,9 +186,12 @@
 <body>
     <div class="container">
         <header class="header">
-            <div class="logo">
-                <i class="fas fa-folder-open"></i>
-                <h1>Gerenciar Formulários</h1>
+            <div class="logo" style="display: flex; align-items: center; gap: 20px;">
+                <img src="Logo-Preto.jpeg" alt="Opedroquetatua" style="height: 80px; border-radius: 10px;">
+                <div>
+                    <h1>Opedroquetatua</h1>
+                    <p style="font-size: 0.9rem; color: #666; margin: 5px 0;">Gerenciador de Formulários</p>
+                </div>
             </div>
             <p class="subtitle">Visualize e gerencie todos os formulários submetidos</p>
         </header>
