--- a/admin-login.html
+++ b/admin-login.html
@@ -67,9 +67,11 @@
 <body>
     <div class="container">
         <div class="login-container">
-            <div class="login-header">
-                <i class="fas fa-shield-alt"></i>
-                <h2>Área Administrativa</h2>
+            <div class="login-header" style="display: flex; flex-direction: column; align-items: center;">
+                <img src="Logo-Preto.jpeg" alt="Opedroquetatua" style="height: 60px; border-radius: 8px; margin-bottom: 15px;">
+                <h2>Opedroquetatua</h2>
+                <p style="color: #666; font-size: 0.9rem; margin: 5px 0;">Área Administrativa</p>
+                <i class="fas fa-lock" style="font-size: 2rem; color: var(--accent-color); margin-top: 10px;"></i>
                 <p style="color: #666;">Faça login para acessar os formulários</p>
             </div>
 
