Adiciona footer copyright e documentacao INPI + LICENSE

--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </p>
         </footer>
+        <footer class="copyright-footer" style="text-align: center; padding: 20px; border-top: 1px solid #eee; font-size: 0.85rem; color: #666;">
+            <p>&copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital<br>
+            Todos os direitos reservados. Uso exclusivo do cliente.</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
