--- a/uso-imagem.html
+++ b/uso-imagem.html
@@ -419,5 +419,8 @@
             }, 3000);
         });
     </script>
+    <footer class="copyright-footer" style="text-align: center; padding: 15px; border-top: 1px solid #eee; font-size: 0.8rem; color: #666; margin-top: 40px;">
+        &copy; 2026 <strong>Opedroquetatua</strong> - Todos os direitos reservados
+    </footer>
 </body>
 </html>
