--- a/admin-login.html
+++ b/admin-login.html
@@ -212,5 +212,8 @@
             return messages[error] || 'Erro ao fazer login: ' + error;
         }
     </script>
+    <footer class="copyright-footer" style="text-align: center; padding: 15px; border-top: 1px solid #eee; font-size: 0.8rem; color: #999; position: fixed; bottom: 0; width: 100%;">
+        &copy; 2026 <strong>Opedroquetatua</strong> - Todos os direitos reservados
+    </footer>
 </body>
 </html>
