Adiciona links Instagram e WhatsApp, remove Facebook

--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
         <footer class="footer">
             <p>&copy; 2026 Estúdio de Tatuagem & Piercing. Todos os direitos reservados.</p>
             <p class="footer-links">
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://www.instagram.com/opedroquetatua/" target="_blank" title="Instagram do @pedroquetatua"><i class="fab fa-instagram"></i></a>
+                <a href="https://wa.me/5511961866207" target="_blank" title="WhatsApp Opedroquetatua"><i class="fab fa-whatsapp"></i></a>
             </p>
         </footer>
         <footer class="copyright-footer" style="text-align: center; padding: 20px; border-top: 1px solid #eee; font-size: 0.85rem; color: #666;">
