--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <a href="https://wa.me/5511961866207" target="_blank" title="WhatsApp Opedroquetatua"><i class="fab fa-whatsapp"></i></a>
             </p>
         </footer>
-        <footer class="copyright-footer" style="text-align: center; padding: 20px; border-top: 1px solid #eee; font-size: 0.85rem; color: #666;">
+        <footer class="copyright-footer">
             <p>&copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital<br>
             Todos os direitos reservados. Uso exclusivo do cliente.</p>
         </footer>
