--- a/visualizar.html
+++ b/visualizar.html
@@ -681,7 +681,7 @@
         // Carregar ao iniciar (será chamado após autenticação)
         // A função carregarFormularios() será chamada pelo onAuthStateChanged
     </script>
-    <footer class="copyright-footer" style="text-align: center; padding: 15px; border-top: 1px solid #eee; font-size: 0.8rem; color: #666; margin-top: 40px;">
+    <footer class="copyright-footer">
         &copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital - Todos os direitos reservados
     </footer>
 </body>
