--- a/visualizar.html
+++ b/visualizar.html
@@ -476,25 +476,343 @@
         // Ver detalhes
         function verDetalhes(index) {
             const form = todosFormularios[index];
-            const detalhes = JSON.stringify(form, null, 2);
+            const modal = window.open('', 'Detalhes', 'width=1000,height=800,scrollbars=yes');
             
-            const modal = window.open('', 'Detalhes', 'width=800,height=600,scrollbars=yes');
-            modal.document.write(`
+            let conteudo = `
                 <html>
                 <head>
-                    <title>Detalhes do Formulário</title>
+                    <meta charset="UTF-8">
+                    <title>Ficha do Cliente - ${form.nome}</title>
                     <style>
-                        body { font-family: monospace; padding: 20px; background: #f5f5f5; }
-                        pre { background: white; padding: 20px; border-radius: 8px; overflow-x: auto; }
-                        h2 { color: #333; }
+                        * { margin: 0; padding: 0; box-sizing: border-box; }
+                        body { 
+                            font-family: 'Segoe UI', Arial, sans-serif; 
+                            background: #f5f5f5; 
+                            padding: 20px;
+                            color: #333;
+                        }
+                        .container {
+                            max-width: 900px;
+                            margin: 0 auto;
+                            background: white;
+                            border-radius: 12px;
+                            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+                            overflow: hidden;
+                        }
+                        .header {
+                            background: linear-gradient(135deg, #1e3c72 0%, #2a5298 100%);
+                            color: white;
+                            padding: 30px;
+                            text-align: center;
+                            border-bottom: 3px solid #e94560;
+                        }
+                        .header h1 {
+                            font-size: 2rem;
+                            margin-bottom: 10px;
+                        }
+                        .header p {
+                            font-size: 0.9rem;
+                            opacity: 0.9;
+                        }
+                        .content {
+                            padding: 30px;
+                        }
+                        .section {
+                            margin-bottom: 30px;
+                            padding-bottom: 20px;
+                            border-bottom: 2px solid #eee;
+                        }
+                        .section:last-child {
+                            border-bottom: none;
+                        }
+                        .section-title {
+                            color: #1e3c72;
+                            font-size: 1.2rem;
+                            font-weight: 600;
+                            margin-bottom: 15px;
+                            padding-bottom: 10px;
+                            border-bottom: 2px solid #e94560;
+                        }
+                        .field-row {
+                            display: grid;
+                            grid-template-columns: 1fr 1fr;
+                            gap: 25px;
+                            margin-bottom: 15px;
+                        }
+                        .field-row.full {
+                            grid-template-columns: 1fr;
+                        }
+                        .field {
+                            display: flex;
+                            flex-direction: column;
+                        }
+                        .field-label {
+                            font-weight: 600;
+                            color: #1e3c72;
+                            font-size: 0.9rem;
+                            margin-bottom: 5px;
+                            text-transform: uppercase;
+                            letter-spacing: 0.5px;
+                        }
+                        .field-value {
+                            color: #555;
+                            font-size: 1rem;
+                            padding: 10px;
+                            background: #f9f9f9;
+                            border-left: 3px solid #e94560;
+                            border-radius: 4px;
+                        }
+                        .checkbox-list {
+                            display: flex;
+                            flex-wrap: wrap;
+                            gap: 10px;
+                            margin-top: 10px;
+                        }
+                        .checkbox-item {
+                            background: #e94560;
+                            color: white;
+                            padding: 5px 12px;
+                            border-radius: 20px;
+                            font-size: 0.85rem;
+                            font-weight: 500;
+                        }
+                        .data-info {
+                            text-align: center;
+                            font-size: 0.85rem;
+                            color: #999;
+                            margin-top: 20px;
+                            padding-top: 20px;
+                            border-top: 1px solid #eee;
+                        }
+                        .print-btn {
+                            display: block;
+                            margin: 20px auto;
+                            padding: 12px 30px;
+                            background: #e94560;
+                            color: white;
+                            border: none;
+                            border-radius: 8px;
+                            cursor: pointer;
+                            font-size: 1rem;
+                            font-weight: 600;
+                            transition: all 0.3s ease;
+                        }
+                        .print-btn:hover {
+                            background: #c73550;
+                            transform: translateY(-2px);
+                        }
+                        @media print {
+                            body { background: white; padding: 0; }
+                            .container { box-shadow: none; }
+                            .print-btn { display: none; }
+                        }
                     </style>
                 </head>
                 <body>
-                    <h2>Detalhes Completos - ${form.formId}</h2>
-                    <pre>${detalhes}</pre>
+                    <div class="container">
+                        <div class="header">
+                            <h1>${form.nome}</h1>
+                            <p>Ficha de ${form.formType.replace('-', ' ').toUpperCase()}</p>
+                        </div>
+                        <div class="content">
+            `;
+
+            // Dados Pessoais (comum a todos)
+            if (form.nome || form.cpf || form.email || form.telefone) {
+                conteudo += \`
+                    <div class="section">
+                        <div class="section-title">👤 Dados Pessoais</div>
+                        <div class="field-row">
+                            <div class="field">
+                                <div class="field-label">Nome Completo</div>
+                                <div class="field-value">\${form.nome || '-'}</div>
+                            </div>
+                            <div class="field">
+                                <div class="field-label">CPF</div>
+                                <div class="field-value">\${form.cpf || '-'}</div>
+                            </div>
+                        </div>
+                        <div class="field-row">
+                            <div class="field">
+                                <div class="field-label">E-mail</div>
+                                <div class="field-value">\${form.email || '-'}</div>
+                            </div>
+                            <div class="field">
+                                <div class="field-label">Telefone/WhatsApp</div>
+                                <div class="field-value">\${form.telefone || '-'}</div>
+                            </div>
+                        </div>
+                        \${form.dataNascimento ? \`
+                        <div class="field-row">
+                            <div class="field">
+                                <div class="field-label">Data de Nascimento</div>
+                                <div class="field-value">\${new Date(form.dataNascimento).toLocaleDateString('pt-BR') || '-'}</div>
+                            </div>
+                            <div class="field">
+                                <div class="field-label">Idade</div>
+                                <div class="field-value">\${form.idade || '-'} anos</div>
+                            </div>
+                        </div>
+                        \` : ''}
+                    </div>
+                \`;
+            }
+
+            // Conteúdo específico por tipo
+            switch(form.formType) {
+                case 'agendamento':
+                    conteudo += \`
+                        <div class="section">
+                            <div class="section-title">🎨 Informações do Projeto</div>
+                            \${form.tipoServico ? \`
+                            <div class="field-row">
+                                <div class="field">
+                                    <div class="field-label">Tipo de Serviço</div>
+                                    <div class="field-value">\${form.tipoServico}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                            \${form.localTatuagem ? \`
+                            <div class="field-row">
+                                <div class="field">
+                                    <div class="field-label">Local do Corpo</div>
+                                    <div class="field-value">\${form.localTatuagem}</div>
+                                </div>
+                                <div class="field">
+                                    <div class="field-label">Tamanho</div>
+                                    <div class="field-value">\${form.tamanho || '-'}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                            \${form.estilo ? \`
+                            <div class="field-row">
+                                <div class="field">
+                                    <div class="field-label">Estilo</div>
+                                    <div class="field-value">\${form.estilo}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                            \${form.descricao ? \`
+                            <div class="field-row full">
+                                <div class="field">
+                                    <div class="field-label">Descrição do Projeto</div>
+                                    <div class="field-value">\${form.descricao}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                        </div>
+                        <div class="section">
+                            <div class="section-title">📅 Preferências de Agendamento</div>
+                            \${form.dataPreferida ? \`
+                            <div class="field-row">
+                                <div class="field">
+                                    <div class="field-label">Data Preferida</div>
+                                    <div class="field-value">\${new Date(form.dataPreferida).toLocaleDateString('pt-BR')}</div>
+                                </div>
+                                <div class="field">
+                                    <div class="field-label">Horário</div>
+                                    <div class="field-value">\${form.horarioPreferido || '-'}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                            \${form.tatuadorPreferido ? \`
+                            <div class="field-row">
+                                <div class="field">
+                                    <div class="field-label">Tatuador Preferido</div>
+                                    <div class="field-value">\${form.tatuadorPreferido}</div>
+                                </div>
+                                <div class="field">
+                                    <div class="field-label">Orçamento</div>
+                                    <div class="field-value">\${form.orcamento || '-'}</div>
+                                </div>
+                            </div>
+                            \` : ''}
+                        </div>
+                    \`;
+                    break;
+
+                case 'anamnese':
+                    conteudo += \`
+                        <div class="section">
+                            <div class="section-title">🏥 Condições de Saúde</div>
+                            \${form.condicoes && form.condicoes.length > 0 ? \`
+                                <div class="field-label">Condições Reportadas:</div>
+                                <div class="checkbox-list">
+                                    \${form.condicoes.map(c => \`<span class="checkbox-item">\${c}</span>\`).join('')}
+                                </div>
+                            \` : '<div class="field-value">Nenhuma condição reportada</div>'}
+                        </div>
+                        <div class="section">
+                            <div class="section-title">💊 Medicações e Alergias</div>
+                            \${form.alergias && form.alergias.length > 0 ? \`
+                                <div class="field-label">Alergias:</div>
+                                <div class="checkbox-list">
+                                    \${form.alergias.map(a => \`<span class="checkbox-item">\${a}</span>\`).join('')}
+                                </div>
+                            \` : '<div class="field-value">Sem alergias reportadas</div>'}
+                        </div>
+                        <div class="section">
+                            <div class="section-title">❓ Questões Específicas</div>
+                            \${form.gravidez === 'sim' ? '<div class="field-value">⚠️ <strong>Cliente grávida</strong></div>' : ''}
+                            \${form.alcool === 'sim' ? '<div class="field-value">⚠️ <strong>Consumiu álcool nas últimas 24h</strong></div>' : ''}
+                            \${form.doacao === 'sim' ? '<div class="field-value">ℹ️ Doação de sangue nos últimos 12 meses</div>' : ''}
+                        </div>
+                    \`;
+                    break;
+
+                case 'consentimento':
+                    conteudo += \`
+                        <div class="section">
+                            <div class="section-title">✅ Status do Consentimento</div>
+                            <div class="field-value">
+                                \${form.assinatura ? '✓ Assinado digitalmente' : '❌ Não assinado'}
+                            </div>
+                        </div>
+                    \`;
+                    break;
+
+                case 'uso-imagem':
+                    conteudo += \`
+                        <div class="section">
+                            <div class="section-title">📸 Autorização de Uso de Imagem</div>
+                            \${form.preferencias && form.preferencias.redes ? \`
+                                <div class="field-label">Redes Sociais Autorizadas:</div>
+                                <div class="checkbox-list">
+                                    \${Object.entries(form.preferencias.redes).map(([rede, autorizado]) => {
+                                        if (autorizado) return \`<span class="checkbox-item">\${rede}</span>\`;
+                                    }).join('')}
+                                </div>
+                            \` : ''}
+                            \${form.preferencias && form.preferencias.visibilidade ? \`
+                            <div class="field-row" style="margin-top: 15px;">
+                                <div class="field">
+                                    <div class="field-label">Visibilidade do Rosto</div>
+                                    <div class="field-value">\${form.preferencias.visibilidade}</div>
+                                </div>
+                                <div class="field">
+                                    <div class="field-label">Identificação</div>
+                                    <div class="field-value">\${form.preferencias.identificacao || '-'}</div>
+                                </div>
+                            </div>\` : ''}
+                        </div>
+                    \`;
+                    break;
+            }
+
+            conteudo += \`
+                            <div class="data-info">
+                                <strong>ID do Formulário:</strong> \${form.formId}<br>
+                                <strong>Preenchido em:</strong> \${new Date(form.timestamp).toLocaleString('pt-BR')}
+                            </div>
+                            <button class="print-btn" onclick="window.print()">🖨️ Imprimir Ficha</button>
+                        </div>
+                    </div>
                 </body>
                 </html>
-            `);
+            \`;
+
+            modal.document.write(conteudo);
+            modal.document.close();
         }
 
         // Imprimir formulário
