--- a/uso-imagem.html
+++ b/uso-imagem.html
@@ -1,3 +1,11 @@
+<!--
+    Opedroquetatua - Sistema de Formulários para Estúdio de Tatuagem
+    Copyright (c) 2026 Opedroquetatua
+    Todos os direitos reservados.
+    
+    Este software e seu código-fonte são propriedade protegida.
+    Uso não autorizado, cópia, modificação ou distribuição são estritamente proibidos.
+-->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
