Atualizar propriedade intelectual para Samtech Informatica (CNPJ 55.004.442/0001-06)

--- a/consentimento.html
+++ b/consentimento.html
@@ -1,7 +1,9 @@
 <!--
-    Opedroquetatua - Sistema de Formulários para Estúdio de Tatuagem
-    Copyright (c) 2026 Opedroquetatua
-    Todos os direitos reservados.
+    Sistema de Formulários para Estúdio de Tatuagem
+    Desenvolvido por: Samtech Informática (CNPJ 55.004.442/0001-06)
+    Responsável Técnico: Samuel Lacerda
+    Cliente: Opedroquetatua
+    Copyright (c) 2026 Samtech Informática - Todos os direitos reservados
     
     Este software e seu código-fonte são propriedade protegida.
     Uso não autorizado, cópia, modificação ou distribuição são estritamente proibidos.
@@ -450,7 +452,7 @@
         });
     </script>
     <footer class="copyright-footer">
-        &copy; 2026 <strong>Opedroquetatua</strong> - Todos os direitos reservados
+        &copy; 2026 <strong>Opedroquetatua</strong> | Desenvolvido por <strong>Samtech Informática</strong>
     </footer>
 </body>
 </html>
