--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
         </footer>
         <footer class="copyright-footer">
             <p>&copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital<br>
-            Todos os direitos reservados. Uso exclusivo do cliente.</p>
+            Desenvolvido por <strong>Samtech Informática</strong> (CNPJ 55.004.442/0001-06)<br>
+            Todos os direitos reservados.</p>
         </footer>
     </div>
 
