--- a/visualizar.html
+++ b/visualizar.html
@@ -1,7 +1,9 @@
 <!--
-    Opedroquetatua - Sistema de Formulários para Estúdio de Tatuagem
-    Copyright (c) 2026 Opedroquetatua
-    Todos os direitos reservados.
+    Sistema de Formulários para Estúdio de Tatuagem
+    Desenvolvido por: Samtech Informática (CNPJ 55.004.442/0001-06)
+    Responsável Técnico: Samuel Lacerda
+    Cliente: Opedroquetatua
+    Copyright (c) 2026 Samtech Informática - Todos os direitos reservados
     
     Este software e seu código-fonte são propriedade protegida.
     Uso não autorizado, cópia, modificação ou distribuição são estritamente proibidos.
@@ -1171,7 +1173,8 @@
         // A função carregarFormularios() será chamada pelo onAuthStateChanged
     </script>
     <footer class="copyright-footer">
-        &copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital - Todos os direitos reservados
+        &copy; 2026 <strong>Opedroquetatua</strong> - Sistema de Formulários Digital<br>
+        Desenvolvido por <strong>Samtech Informática</strong> (CNPJ 55.004.442/0001-06) - Todos os direitos reservados
     </footer>
 </body>
 </html>
